# adaptive-periodization-agent

./: .env.example  .gitignore  IMPROVEMENT_ROADMAP.md  LEARNING_GUIDE.md  Makefile  README.md  adaptive_periodization_trd.md  pyproject.toml
src/: __init__.py
src/data/: __init__.py  feature_engineering.py  load_data.py  preprocess.py  synthetic_data.py
src/environment/: __init__.py  constraints.py  periodization_env.py  reward_functions.py
src/evaluation/: __init__.py  ablation_study.py  cross_validation.py  evaluate.py  metrics.py  run_comparison.py  statistical_analysis.py  strong_baselines.py  visualize.py
src/models/: __init__.py  baseline_policies.py  networks.py  sac_agent.py
src/training/: __init__.py  callbacks.py  config.yaml  train.py  tune.py
src/utils/: __init__.py  reproducibility.py
tests/: conftest.py  test_constraints.py  test_environment.py  test_reward.py
